--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./tests  --reporter=nyan --exit",
     "start": "nodemon index.js"
   },
   "keywords": [],
@@ -12,9 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "chai": "^4.3.6",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
+    "mocha": "^10.0.0",
     "mongoose": "^6.5.2",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "nyc": "^15.1.0"
   },
   "devDependencies": {
     "eslint": "^8.22.0",
