--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./tests  --reporter=nyan --exit",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "coverage": "nyc npm test"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "mocha": "^10.0.0",
