--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./tests  --reporter=nyan --exit",
+    "test": "jest",
     "start": "nodemon index.js",
-    "coverage": "nyc npm test"
+    "coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,11 @@
     "body-parser": "^1.20.0",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
+    "eslint-plugin-chai-friendly": "^0.7.2",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "jest": "^28.1.3",
     "mocha": "^10.0.0",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
