--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha ./tests",
     "start": "nodemon index.js",
-    "coverage": "jest --coverage"
+    "coverage": "nyc npm test"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +17,9 @@
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "eslint-plugin-chai-friendly": "^0.7.2",
+    "eslint-plugin-mocha": "^10.1.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "jest": "^28.1.3",
     "mocha": "^10.0.0",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
