--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./tests",
+    "test": "jest",
     "start": "nodemon index.js",
-    "coverage": "nyc npm test"
+    "coverage": "npm test --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.0.0",
     "body-parser": "^1.20.0",
-    "chai": "^4.3.6",
-    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "eslint-plugin-chai-friendly": "^0.7.2",
     "eslint-plugin-mocha": "^10.1.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "mocha": "^10.0.0",
+    "jest": "^29.0.2",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
-    "nyc": "^15.1.0"
+    "nyc": "^15.1.0",
+    "supertest": "^6.2.4"
   },
   "devDependencies": {
     "eslint": "^8.22.0",
